--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.4",
     "@testing-library/user-event": "^10.1.0",
-    "bootstrap": "^5.1.1",
+    "bootstrap": "^5.1.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^16.13.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
