--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.1.0",
     "react": "^16.13.1",
     "react-bootstrap": "^2.0.0-beta.6",
+    "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
