--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.13.1",
     "react-fade-in": "^2.0.1",
     "react-icons": "^4.2.0",
+    "react-rater": "^6.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
