--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@okta/okta-react": "^1.4.1",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.4",
     "@testing-library/user-event": "^10.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^4.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-native-ratings": "^8.1.0",
+    "react-native-star-rating": "^1.1.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
